--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -72,7 +72,7 @@
   }
 
   function fetchAPIResponse(message) {
-    fetch('http://localhost:8090/api/chat', {
+    fetch('https://srsemy66hq.us-east-1.awsapprunner.com/api/chat', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
@@ -157,7 +157,7 @@
   }
 
   .chat-box {
-    height: 500px;
+    height: 450px;
     overflow-y: scroll;
     padding: 10px;
   }
