--- a/public/index.ejs
+++ b/public/index.ejs
@@ -32,10 +32,9 @@
     <section class="banner-section">
         <div class="container">
             <div class="banner-content">
-                <h6>Welcome to PLATFORM FOR</h6>
-                <h1>Cognitive Disabled Person</h1>
-                <p>The Radon Shield Protection Plan provides homeowners with peace of mind regarding indoor levels of
-                    radon gas</p>
+                <h6>Welcome to Your Digital Assistant</h6>
+                <h1>Empower Your Day-to-Day</h1>
+                <p>Our platform offers tools and support to enhance daily cognitive activities and make your tasks easier. Join us to start your journey towards enhanced cognitive engagement.</p>
                 <a class="btn custom-btn" href="signup">Register Now</a>
             </div>
         </div>
