--- a/public/index.ejs
+++ b/public/index.ejs
@@ -48,9 +48,9 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="who-content">
-                        <h6>Who we are</h6>
-                        <h3>Statistics Disablities</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>
+                        <h6>Discover Our Mission</h6>
+                        <h3>Empowering Engagement</h3>
+                        <p>Our mission is to support and enhance the cognitive process through intuitive tools and resources. We strive to make daily tasks more manageable and improve cognitive engagement for everyone.</p>
                         <div class="row">
                             <div class="col-12 col-lg-4">
                                 <div class="who-counter">
@@ -60,13 +60,13 @@
                             </div>
                             <div class="col-12 col-lg-4">
                                 <div class="who-counter">
-                                    <span>Lorem Ipsum</span>
+                                    <span>Programs Offered</span>
                                     <h2>185+</h2>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <div class="who-counter">
-                                    <span>Lorem Ipsum</span>
+                                    <span>Positive Outcomes</span>
                                     <h2>100</h2>
                                 </div>
                             </div>
