--- a/public/index.ejs
+++ b/public/index.ejs
@@ -54,7 +54,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-4">
                                 <div class="who-counter">
-                                    <span>Lorem Ipsum</span>
+                                    <span>Users Joined</span>
                                     <h2>12+</h2>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                     <div class="values-box text-center">
                         <a href="login">
                             <img src="assets/images/box-1.png" class="img-fluid main-img" alt="mood image">
-                            <h5>Mood Tracker</h5>
+                            <h5>Interactive Mood Tracker</h5>
                             <img src="assets/images/arrow.png" class="img-fluid" alt="arrow">
                         </a>              
                     </div>
@@ -142,7 +142,7 @@
                     <div class="values-box text-center">
                         <a href="login">
                             <img src="assets/images/box-2.png" class="img-fluid main-img" alt="mood image">
-                            <h5>Mind Game</h5>
+                            <h5>Cognitive Games</h5>
                             <img src="assets/images/arrow.png" class="img-fluid" alt="arrow">
                         </a>              
                     </div>
