--- a/public/index.ejs
+++ b/public/index.ejs
@@ -224,14 +224,14 @@
                 <h2>Register To Get Engage With Us!</h2>
             </div>
             <div class="register-content mt-5">
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum. </p>
+                <p>Our platform offers tools and support to enhance daily cognitive activities and make your tasks easier. Join us to start your journey towards enhanced cognitive engagement.</p>
                 <a class="btn custom-btn" href="signup">Register Now</a>
             </div>
         </div>
     </section>
 
     <footer style="position: relative;">
-        <div class="text-center">Lorem Ipsum 2023 © All rights reserved</div>
+        <div class="text-center">MIS 3502 Final Project</div>
     </footer>
 
 <%- include('./partials/scriptlinks') %>
