--- a/public/index.ejs
+++ b/public/index.ejs
@@ -12,7 +12,7 @@
     <header class="landing-header">
         <nav class="navbar">
             <div class="container">
-                <a class="navbar-brand" href="#">Disabled Person</a>
+                <a class="navbar-brand" href="#">Inhance your Cogitive </a>
                 <div class="justify-content-end" id="navbarNav">
                     <ul class="navbar-nav d-flex flex-row">
                         <li class="nav-item">
