--- a/public/index.ejs
+++ b/public/index.ejs
@@ -176,45 +176,47 @@
         </div>
     </section>
 
-    <section class="core-section py-5">
-        <div class="container">
-            <div class="headig-section">
-                <h6>values</h6>
-                <h2>Our Core Values</h2>
+<section class="core-section py-5">
+    <div class="container">
+        <div class="headig-section">
+            <h6>Our Principles</h6>
+            <h2>Guiding Our Journey</h2>
+        </div>
+        <div class="row mt-5">
+            <div class="col-12 col-lg-4 mb-lg-0 mb-4">
+                <div class="core-box text-center">
+                    <div class="core-icon-box">
+                        <img src="assets/images/core-1.png" class="img-fluid" alt="Unity">
+                    </div>
+                    <span>01</span>
+                    <h6>Unity in Diversity</h6>
+                    <p>We celebrate and leverage our diverse strengths to achieve common goals.</p>
+                </div>
             </div>
-            <div class="row mt-5">
-                <div class="col-12 col-lg-4 mb-lg-0 mb-4">
-                    <div class="core-box text-center">
-                        <div class="core-icon-box">
-                            <img src="assets/images/core-1.png" class="img-fluid" alt="hand">
-                        </div>
-                        <span>01</span>
-                        <h6>Standing with you</h6>
+            <div class="col-12 col-lg-4 mb-lg-0 mb-4">
+                <div class="core-box text-center">
+                    <div class="core-icon-box">
+                        <img src="assets/images/core-2.png" class="img-fluid" alt="Empathy">
                     </div>
+                    <span>02</span>
+                    <h6>Empathetic Understanding</h6>
+                    <p>Connecting deeply with your experiences, we tailor our tools for your unique journey.</p>
                 </div>
-                <div class="col-12 col-lg-4 mb-lg-0 mb-4">
-                    <div class="core-box text-center">
-                        <div class="core-icon-box">
-                            <img src="assets/images/core-2.png" class="img-fluid" alt="hand">
-                        </div>
-                        <span>02</span>
-                        <h6>We understand 
-                            each other.</h6>
+            </div>
+            <div class="col-12 col-lg-4 mb-lg-0 mb-4">
+                <div class="core-box no-separator text-center">
+                    <div class="core-icon-box">
+                        <img src="assets/images/core-3.png" class="img-fluid" alt="Empowerment">
                     </div>
-                </div>
-                <div class="col-12 col-lg-4 mb-lg-0 mb-4">
-                    <div class="core-box no-separator text-center">
-                        <div class="core-icon-box">
-                            <img src="assets/images/core-3.png" class="img-fluid" alt="hand">
-                        </div>
-                        <span>03</span>
-                        <h6>You decide the
-                            next move.</h6>
-                    </div>
+                    <span>03</span>
+                    <h6>Empowered Autonomy</h6>
+                    <p>You are in control, equipped with the tools to choose your path forward.</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <section class="register-section py-5">
         <div class="container">
