--- a/public/dashboard.ejs
+++ b/public/dashboard.ejs
@@ -13,8 +13,7 @@
     <section class="dashboard-main">
         <div class="container">
             <h1 class="main-heading">Select Category</h1>
-            <p class="para text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. </p>
+            <p class="para text-center">Choose from a range of categories designed to support and enhance your daily experience. Each category is tailored to your needs, offering a personalized touch to your journey. </p>
             <div class="row">
                 <div class="col-12 col-lg-3 mb-lg-0 mb-4">
                     <div class="dasboard-box" style="background-image: url(assets/images/box-1.png);">
@@ -24,8 +23,7 @@
                             </div>
                             <div class="dasboard-box-content">
                                 <h5>mood tracker</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore aliqua. </p>
+                                <p>Track your emotional wellness with our Mood Tracker. Reflect on your feelings, spot patterns, and receive insights to improve your emotional health. </p>
                             </div>
                         </a>
                     </div>
@@ -39,8 +37,7 @@
                             </div>
                             <div class="dasboard-box-content">
                                 <h5>mind games</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore aliqua. </p>
+                                <p>Engage with a variety of games designed to sharpen your cognitive abilities, offering both fun and functionality. </p>
                             </div>
                         </a>
                     </div>
@@ -54,8 +51,7 @@
                             </div>
                             <div class="dasboard-box-content">
                                 <h5>emergency contact</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore aliqua. </p>
+                                <p>Quickly access your emergency contacts with just a click, ensuring you’re always prepared and connected when you need it most. </p>
                             </div>
                         </a>
                     </div>
@@ -69,8 +65,7 @@
                             </div>
                             <div class="dasboard-box-content">
                                 <h5>chat</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore aliqua. </p>
+                                <p>Connect with AI. Whether you have a question or just need someone to talk to, we’re here for you. </p>
                             </div>
                         </a>
                     </div>
