--- a/public/partials/footer.ejs
+++ b/public/partials/footer.ejs
@@ -1,4 +1,4 @@
 <footer>
-    <div class="text-center">Lorem Ipsum 2023 © All rights reserved</div>
+    <div class="text-center">MIS 3502 Project</div>
 </footer>
 <%- include('./notification.ejs') %>
