--- a/public/dashboard.ejs
+++ b/public/dashboard.ejs
@@ -13,7 +13,7 @@
     <section class="dashboard-main">
         <div class="container">
             <h1 class="main-heading">Select Category</h1>
-            <p class="para text-center">Choose from a range of categories designed to support and enhance your daily experience. Each category is tailored to your needs, offering a personalized touch to your journey. </p>
+            <p class="para text-center"> from a range of categories designed to support and enhance your daily experience. Each category is tailored to your needs, offering a personalized touch to your journey. </p>
             <div class="row">
                 <div class="col-12 col-lg-3 mb-lg-0 mb-4">
                     <div class="dasboard-box" style="background-image: url(assets/images/box-1.png);">
