--- a/public/mind-games.ejs
+++ b/public/mind-games.ejs
@@ -18,7 +18,7 @@
     </section>
 
     <footer style="position: relative;">
-        <div class="text-center">Lorem Ipsum 2023 © All rights reserved</div>
+        <div class="text-center">MIS 3502 Project</div>
     </footer>
 
 <%- include('./partials/scriptlinks') %>
